# cuflash-attn

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SUMMARY.md  book.json  package-lock.json  package.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  pages.yml  release.yml
.kiro/specs/cuflash-attn/: design.md  requirements.md  tasks.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.vitepress/: config.js
.vitepress/theme/components/: CodeCopy.vue
benchmarks/: bench_flash_attention.cu
changelog/: 2026-02-13_optimization.md
docs/: algorithm.md  api.md  building.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.js  config.ts  style.css
docs/.vitepress/theme/: animation.css  custom.css  index.js  style.css
docs/.vitepress/theme/components/: BenchmarkChart.vue  CodeBlock.vue  ContributorList.vue  FeatureCard.vue  LanguageSwitcher.vue  VersionBadge.vue
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: kernel-test-interface.md
docs/en/: README.md  algorithm.md  api-reference.md  architecture.md  building.md  index.md  project-status.md  troubleshooting.md
docs/en/guide/: quick-start.md
docs/en/release-notes/: breaking-changes.md  changelog.md
docs/en/research/: references.md
docs/en/specs/: index.md
docs/scripts/: sync-changelog.mjs
docs/zh/: README.md  algorithm.md  api-reference.md  architecture.md  building.md  index.md  project-status.md  troubleshooting.md
docs/zh/guide/: quick-start.md
docs/zh/release-notes/: breaking-changes.md  changelog.md
docs/zh/research/: references.md
docs/zh/specs/: index.md
examples/: basic_usage.cu  python_binding.py
include/: flash_attention.h
include/cuflash/: export.h  flash_attention.h
include/cuflash/kernels/: matmul.cuh  online_softmax.cuh  tile_io.cuh
openspec/: config.yaml
openspec/changes/archive/final-ai-tooling-hardening/: design.md  tasks.md
openspec/changes/archive/final-bug-sweep/: proposal.md  tasks.md
openspec/changes/archive/final-ci-rationalization/: tasks.md
openspec/changes/archive/final-docs-governance/: proposal.md
openspec/changes/archive/final-handoff-backlog/: design.md  tasks.md
openspec/changes/archive/final-pages-redesign/: tasks.md
openspec/changes/archive/project-finalization-program/: design.md  tasks.md
openspec/changes/archive/project-finalization-v0.3.0/: proposal.md  tasks.md
openspec/changes/final-ai-tooling-hardening/: proposal.md  tasks.md
openspec/changes/final-bug-sweep/: tasks.md
openspec/changes/final-ci-rationalization/: proposal.md  tasks.md
openspec/changes/final-docs-governance/: tasks.md
openspec/changes/final-handoff-backlog/: proposal.md  tasks.md
openspec/changes/final-pages-redesign/: proposal.md  tasks.md
openspec/changes/project-finalization-program/: proposal.md  tasks.md
openspec/changes/project-finalization-v0.3.0/: tasks.md
openspec/specs/: index.md
openspec/specs/design/: flash-attention-design.md
openspec/specs/verification/: flash-attention-verification.md
scripts/: clean.sh
src/: flash_attention_api.cu  flash_attention_backward.cu  flash_attention_backward_fp16.cu  flash_attention_forward.cu  flash_attention_fp16.cu  kernel_launch_utils.cuh  matmul.cuh  online_softmax.cuh
src/api/: flash_attention_api.cu
src/backward/: flash_attention_backward_typed.cu
src/forward/: flash_attention_forward.cu  flash_attention_forward_typed.cu
src/kernels/: matmul.cu  matmul.cuh  online_softmax.cu  tile_io.cu  workspace_utils.cuh
src/kernels/impl/: online_softmax.cuh  tile_io.cuh
tests/: test_api_smoke.cpp  test_backward.cu  test_causal_mask.cu  test_dtype.cu  test_error_handling.cu  test_forward.cu  test_main.cpp  test_numerical_stability.cu  test_online_softmax.cu  test_pytorch_comparison.py
tests/unit/: test_matmul.cu  test_online_softmax.cu  test_stress_edge_cases.cu  test_tile_io.cu
